修改字符串转数字逻辑